name:                recall
version:             0.1.0.0
synopsis:            Memoization using type families
-- description:
homepage:            https://github.com/nickspinale/recall.git
license:             MIT
license-file:        LICENSE
author:              Nick Spinale
maintainer:          spinalen@carleton.edu
-- copyright:
category:            Data
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:     Data.Recall
  build-depends:       base,
                       array
  default-language:    Haskell2010
